--- a/sections/promo-grid.liquid
+++ b/sections/promo-grid.liquid
@@ -286,6 +286,11 @@
             "id": "framed",
             "label": "Add frame",
             "default": false
+          },
+          {
+            "type": "color",
+            "id": "color_frame",
+            "label": "Frame Color"
           }
         ]
       },
@@ -346,6 +351,11 @@
             "id": "framed",
             "label": "Add frame",
             "default": false
+          },
+          {
+            "type": "color",
+            "id": "color_frame",
+            "label": "Frame Color"
           }
         ]
       },
@@ -481,6 +491,11 @@
             "id": "framed",
             "label": "Add frame",
             "default": false
+          },
+          {
+            "type": "color",
+            "id": "color_frame",
+            "label": "Frame Color"
           }
         ]
       },
@@ -562,6 +577,11 @@
             "id": "framed",
             "label": "Add frame",
             "default": false
+          },
+          {
+            "type": "color",
+            "id": "color_frame",
+            "label": "Frame Color"
           }
         ]
       },
@@ -643,6 +663,11 @@
             "id": "framed",
             "label": "Add frame",
             "default": false
+          },
+          {
+            "type": "color",
+            "id": "color_frame",
+            "label": "Frame Color"
           }
         ]
       }
