--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -28,6 +28,7 @@
 
   {%- render 'font-face' -%}
   {{ 'theme.css' | asset_url | stylesheet_tag }}
+  {{ 'theme.customization.css' | asset_url | stylesheet_tag }}
   {%- render 'css-variables' -%}
 
   <script>
@@ -127,5 +128,7 @@
   {%- if template contains 'product' -%}
     {%- render 'recently-viewed-product-template' -%}
   {%- endif -%}
+
+  <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=V3Tv6G"></script>
 </body>
 </html>
