--- a/assets/theme.customization.css.liquid
+++ b/assets/theme.customization.css.liquid
@@ -2,3 +2,15 @@
  * Custom Style
  */
 
+.hero__text-shadow {
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.hero__text-inner {
+    display: flex;
+}
+
+.hero_text-inner--img img {
+    margin-top: -80px;
+}
