--- a/sections/promo-grid.liquid
+++ b/sections/promo-grid.liquid
@@ -374,6 +374,12 @@
             "label": "Link"
           },
           {
+            "type": "color",
+            "id": "image_bg_color",
+            "label": "Background Color",
+            "default": "rgba(255, 255, 255, 1)"
+          },
+          {
             "type": "select",
             "id": "width",
             "label": "Width",
