--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -177,44 +177,55 @@
                 <div class="hero__text-wrap">
                   <div class="page-width">
                     <div class="hero__text-content {{ block.settings.text_align }}">
-                      <div class="hero__text-shadow">
-                        {%- unless block.settings.top_subheading == blank -%}
-                          <div class="hero__top-subtitle">
-                            <div class="animation-cropper"><div class="animation-contents">
-                              {{ block.settings.top_subheading | escape }}
-                            </div></div>
+                      <div class="hero__text-shadow" style="background-color: {{ block.settings.color_text_bg }}">
+                        <div class="hero__text-inner">
+                          <div class="hero_text-inner--cta">
+                            {%- unless block.settings.top_subheading == blank -%}
+                              <div class="hero__top-subtitle">
+                                <div class="animation-cropper"><div class="animation-contents">
+                                  {{ block.settings.top_subheading | escape }}
+                                </div></div>
+                              </div>
+                            {%- endunless -%}
+                            {%- unless block.settings.title == blank -%}
+                              <h2 class="h1 hero__title">
+                                <div class="animation-cropper"><div class="animation-contents">
+                                {{ block.settings.title | newline_to_br }}
+                                </div></div>
+                              </h2>
+                            {%- endunless -%}
+                            {%- if block.settings.subheading or block.settings.link or block.settings.link_2 -%}
+                              {%- unless block.settings.subheading == blank -%}
+                                <div class="hero__subtitle">
+                                  <div class="animation-cropper"><div class="animation-contents">
+                                    {{ block.settings.subheading | escape }}
+                                  </div></div>
+                                </div>
+                              {%- endunless -%}
+                              {%- if block.settings.link_text != blank or block.settings.link_text_2 != blank -%}
+                                <div class="hero__link">
+                                  {%- if block.settings.link_text != blank -%}
+                                    <a href="{{ block.settings.link }}" class="btn{% if block.settings.color_accent contains 'rgba(0,0,0,0)' %} btn--inverse{% endif %}">
+                                      {{ block.settings.link_text }}
+                                    </a>
+                                  {%- endif -%}
+                                  {%- if block.settings.link_text_2 != blank -%}
+                                    <a href="{{ block.settings.link_2 }}" class="btn{% if block.settings.color_accent contains 'rgba(0,0,0,0)' %} btn--inverse{% endif %}">
+                                      {{ block.settings.link_text_2 }}
+                                    </a>
+                                  {%- endif -%}
+                                </div>
+                              {%- endif -%}
+                            {%- endif -%}
                           </div>
-                        {%- endunless -%}
-                        {%- unless block.settings.title == blank -%}
-                          <h2 class="h1 hero__title">
-                            <div class="animation-cropper"><div class="animation-contents">
-                            {{ block.settings.title | newline_to_br }}
-                            </div></div>
-                          </h2>
-                        {%- endunless -%}
-                        {%- if block.settings.subheading or block.settings.link or block.settings.link_2 -%}
-                          {%- unless block.settings.subheading == blank -%}
-                            <div class="hero__subtitle">
-                              <div class="animation-cropper"><div class="animation-contents">
-                                {{ block.settings.subheading | escape }}
-                              </div></div>
-                            </div>
-                          {%- endunless -%}
-                          {%- if block.settings.link_text != blank or block.settings.link_text_2 != blank -%}
-                            <div class="hero__link">
-                              {%- if block.settings.link_text != blank -%}
-                                <a href="{{ block.settings.link }}" class="btn{% if block.settings.color_accent contains 'rgba(0,0,0,0)' %} btn--inverse{% endif %}">
-                                  {{ block.settings.link_text }}
-                                </a>
-                              {%- endif -%}
-                              {%- if block.settings.link_text_2 != blank -%}
-                                <a href="{{ block.settings.link_2 }}" class="btn{% if block.settings.color_accent contains 'rgba(0,0,0,0)' %} btn--inverse{% endif %}">
-                                  {{ block.settings.link_text_2 }}
-                                </a>
-                              {%- endif -%}
-                            </div>
-                          {%- endif -%}
-                        {%- endif -%}
+
+                          <div class="hero_text-inner--img">
+                            {% assign img_url = block.settings.image_inner_width | append: 'x' %}
+                            <img class="image-fit hero__inner-image hero__inner-image--{{ block.id }}"
+                              src="{{ block.settings.image_inner | img_url: img_url }}"
+                              alt="{{ block.settings.image_inner.alt | escape }}">
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -419,6 +430,27 @@
             "default": "rgba(255,255,255,1)"
           },
           {
+            "type": "color",
+            "id": "color_text_bg",
+            "label": "Text Box Background",
+            "default": "rgba(255,255,255,1)"
+          },
+          {
+            "type": "image_picker",
+            "id": "image_inner",
+            "label": "Image"
+          },
+          {
+            "type": "range",
+            "id": "image_inner_width",
+            "label": "Image Width",
+            "unit": "px",
+            "min": 0,
+            "max": 500,
+            "step": 10,
+            "default": 300
+          },
+          {
             "type": "select",
             "id": "text_align",
             "label": "Text alignment",
@@ -453,7 +485,7 @@
           {
             "type": "image_picker",
             "id": "image",
-            "label": "Image"
+            "label": "Background Image"
           },
           {
             "type": "select",
