--- a/assets/theme.customization.css.liquid
+++ b/assets/theme.customization.css.liquid
@@ -14,3 +14,7 @@
 .hero_text-inner--img img {
     margin-top: -80px;
 }
+
+[data-type_product_capitalize=true] .collection-item__title span {
+    font-size: 20px !important;
+}
