--- a/snippets/collection-grid-item.liquid
+++ b/snippets/collection-grid-item.liquid
@@ -5,6 +5,7 @@
 
   unless background_position
     assign background_position = 'center center'
+    assign background_image = block.settings.background-image
   endunless
 
   if block.settings.title != blank
@@ -20,8 +21,8 @@
   endif
 -%}
 
-<div class="grid__item {{ grid_item_width }}">
-  <a href="{{ collection.url }}" class="collection-item collection-item--{{ settings.collection_grid_style }}" data-aos="row-of-{{ per_row }}">
+<div class="grid__item {{ grid_item_width }}" style="padding: {{ section.settings.grid-padding }}; position: relative; text-align: center;">
+  
 
     {%- liquid
       if settings.collection_grid_image == 'collection' and collection.image
@@ -38,9 +39,13 @@
       <div class="image-wrap">
         <div
           class="collection-image collection-image--{{ settings.collection_grid_shape }} lazyload"
-          data-bgset="{% render 'bgset', image: collection_image %}"
+          {% if background_image %}
+            data-bgset="{% render 'bgset', image: background_image %}"
+          {% else %}
+            data-bgset="{% render 'bgset', image: collection_image %}"
+          {% endif %}
           data-sizes="auto"
-          style="background-position: {{ background_position }};">
+          style="background-position: {{ background_position }}; opacity: 1;">
         </div>
       </div>
       <noscript>
@@ -52,11 +57,12 @@
     {%- endif -%}
 
     <span
-      class="collection-item__title collection-item__title--{{ settings.collection_grid_style }} collection-item__title--{{ settings.type_collection_font }} collection-item__title--{{ settings.collection_grid_text_align }}">
+      class="collection-item__title collection-item__title--{{ settings.collection_grid_style }} collection-item__title--{{ settings.type_collection_font }} collection-item__title--{{ settings.collection_grid_text_align }}"
+      style="position: absolute; top: 30px; width: 100%; color: white;">
       <span>
         {{ title_output }}
       </span>
     </span>
 
-  </a>
+    <a href="{{ collection.url }}" class="btn navigable" style="position: absolute; bottom: 20px; left: calc(50% - 75px); width: 150px;">Shop Now</a>
 </div>
