--- a/assets/theme.customization.css.liquid
+++ b/assets/theme.customization.css.liquid
@@ -78,3 +78,11 @@
   transition: none;
   opacity: 1;
 }
+
+.logo-bar__text {
+  font-size: 20px;
+  color: #003366;
+  font-weight: bold;
+  line-height: 1.2;
+  margin-top: 10px;
+}
