--- a/sections/logo-list.liquid
+++ b/sections/logo-list.liquid
@@ -17,11 +17,12 @@
     <div class="logo-bar logo-bar--{{ section.id }}">
       {%- for block in section.blocks -%}
         <div class="logo-bar__item" {{ block.shopify_attributes }}
-        style="flex: 0 1 {{ section.settings.logo_width }}px;"
+        style="flex: 0 1 {{ block.settings.logo_width }}px;"
         >
           {%- if block.settings.link != blank -%}
             <a href="{{ block.settings.link }}" class="logo-bar__link">
           {%- endif -%}
+          <div class="logo-bar__image-wrap" style="padding: 0 {{ block.settings.logo_padding }}px;">
           {%- if block.settings.image != blank -%}
             {%- assign img_url = block.settings.image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
             <img class="logo-bar__image lazyload"
@@ -30,9 +31,12 @@
                 data-aspectratio="{{ block.settings.image.aspect_ratio }}"
                 data-sizes="auto"
                 alt="{{ block.settings.image.alt }}">
+            
           {%- else -%}
             {{ 'logo' | placeholder_svg_tag: 'placeholder-svg' }}
           {%- endif -%}
+          </div>
+          <p class="logo-bar__text">{{ block.settings.logo-text }}</p>
           {%- if block.settings.link != blank -%}
             </a>
           {%- endif -%}
@@ -65,16 +69,7 @@
         "step": 2,
         "unit": "%"
       },
-      {
-        "type": "range",
-        "id": "logo_width",
-        "label": "Logo Width",
-        "default": 180,
-        "min": 100,
-        "max": 600,
-        "step": 10,
-        "unit": "px"
-      },
+      
       {
         "type": "checkbox",
         "id": "divider",
@@ -88,9 +83,35 @@
         "name": "Logo",
         "settings": [
           {
+            "type": "range",
+            "id": "logo_width",
+            "label": "Logo Width",
+            "default": 180,
+            "min": 100,
+            "max": 600,
+            "step": 10,
+            "unit": "px"
+          },
+          {
+            "type": "range",
+            "id": "logo_padding",
+            "label": "Wrap Space",
+            "unit": "px",
+            "min": 0,
+            "max": 50,
+            "step": 1,
+            "default": 1
+          },
+          {
             "type": "image_picker",
             "id": "image",
             "label": "Image"
+          },
+          {
+            "type": "text",
+            "id": "logo-text",
+            "label": "Logo Title",
+            "default": "Default Title"
           },
           {
             "type": "url",
