--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -69,6 +69,18 @@
             data-bars="true"
           {% endif %}
           data-slide-count="{{ section.blocks.size }}">
+
+          <div
+          {{ block.shopify_attributes }}
+          class="slideshow__slide slideshow__slide--{{ block.id }}"
+          data-id="{{ block.id }}">
+            <div id="hero_youtube" class="hero__media hero__media--{{ section.id }}">
+              <div class="hero__media-container">
+                <iframe id="YouTubeVideo-1605599751560b2bde" data-video-id="_9VUPq3SxOc" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="1280" height="720" src="https://www.youtube.com/embed/HCtYd50h3dE?autoplay=1;autohide=0;branding=0;cc_load_policy=0;controls=0;fs=0;iv_load_policy=3;modestbranding=1;playsinline=1;quality=hd720;rel=0;showinfo=0;wmode=opaque;enablejsapi=1;origin=https%3A%2F%2Fscimeraproducts.myshopify.com;widgetid=1" tabindex="-1"></iframe>
+              </div>
+            </div>
+          </div>
+
           {%- for block in section.blocks -%}
             <div
               {{ block.shopify_attributes }}
@@ -251,7 +263,7 @@
   {
     "name": "Slideshow",
     "class": "index-section--hero",
-    "max_blocks": 5,
+    "max_blocks": 6,
     "settings": [
       {
         "type": "select",
@@ -363,6 +375,11 @@
         "max": 10,
         "step": 1,
         "unit": "s"
+      },
+      {
+        "type": "richtext",
+        "id": "video_url",
+        "label": "First slider video embed"
       }
     ],
     "blocks": [
