--- a/snippets/collection-grid-item.liquid
+++ b/snippets/collection-grid-item.liquid
@@ -59,7 +59,7 @@
     <span
       class="collection-item__title collection-item__title--{{ settings.collection_grid_style }} collection-item__title--{{ settings.type_collection_font }} collection-item__title--{{ settings.collection_grid_text_align }}"
       style="position: absolute; top: 30px; width: 100%; color: white;">
-      <span>
+      <span style="color: #000">
         {{ title_output }}
       </span>
     </span>
