--- a/snippets/predictive-template.liquid
+++ b/snippets/predictive-template.liquid
@@ -47,6 +47,9 @@
                           {{{price}}}
                         </div>
                       {% endraw %}{%- endif -%}{% raw %}
+                      {%- if settings.enable_product_reviews -%}
+                        <span class="shopify-product-reviews-badge" data-id="{{ product.id }}"></span>
+                      {%- endif -%}
                     </div>
                   </a>
                 </div>
