--- a/snippets/ajax-cart-template.liquid
+++ b/snippets/ajax-cart-template.liquid
@@ -21,7 +21,9 @@
                   {{/if}}
                 {{/each}}
               {{/properties}}
-            </div>
+            
+{{sellingPlan}}
+</div>
 
             <div class="grid grid--full display-table">
               <div class="grid__item display-table-cell one-half">
