--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -11,7 +11,8 @@
     <div class="grid__item medium-up--two-thirds">
       <h2>{{ 'customer.orders.title' | t }}</h2>
 
-      {%- if customer.orders.size != 0 -%}
+      
+<p><a href="/pages/my-subscriptions" class="text-link">Manage Subscription</a></p>{%- if customer.orders.size != 0 -%}
 
         <table class="table--responsive table--small-text">
           <thead>
