--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -76,7 +76,9 @@
             content_for_header
         }}
 
-        <script src="{{ 'vendor-scripts-v7.js' | asset_url | split: '?' | first }}" defer="defer"></script>
+        {{ 'bsub.js' | asset_url | script_tag }}
+{{ 'bsub.scss.css' | asset_url | stylesheet_tag }}
+<script src="{{ 'vendor-scripts-v7.js' | asset_url | split: '?' | first }}" defer="defer"></script>
 
         {%- if shop.enabled_currencies.size > 1 -%}
             <link rel="preload" as="style" href="{{ 'currency-flags.css' | asset_url }}" onload="this.onload=null;this.rel='stylesheet'"/>
@@ -89,7 +91,8 @@
             <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script>
         {%- endif -%}
         {% include 'pagefly-header' %}
-    </head>
+      {%- render 'bold-subscription-widget' -%}
+</head>
 
     <body class="template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}{% if request.path == '/challenge' %} template-challange{% endif %}" data-center-text="{{ settings.type_body_align_text }}" data-button_style="{{ settings.button_style }}" data-type_header_capitalize="{{ settings.type_header_capitalize }}" data-type_headers_align_text="{{ settings.type_headers_align_text }}" data-type_product_capitalize="{{ settings.type_product_capitalize }}" data-swatch_style="{{ settings.swatch_style }}">
         <a class="in-page-link visually-hidden skip-link" href="#MainContent">{{
