--- a/templates/page.sca-storelocator.liquid
+++ b/templates/page.sca-storelocator.liquid
@@ -171,3 +171,9 @@ if("undefined"==typeof Handlebars&&"function"==typeof define&&define.amd){var sc
 <button class="scasl-view-map-btn">View Map</button>
 {%endraw%}
 </script>
+
+<section class="shopify-section" style="padding: 50px 0;">
+  <div class="page-width">
+    <p style="font-size: 22px; font-weight: bold;">For Wholesale Inquiries, call: <a href="tel: (855) 724-6372" style="text-decoration: underline;">(855) 724-6372</a> or email: <a href="mailto: wholesale@scimera.com" style="text-decoration: underline;">wholesale@scimera.com</a></p>
+  </div>
+</section>
