--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -60,13 +60,10 @@
                           {{ item.variant.title }}
                         </p>
                       {%- endunless -%}
-{% if item.selling_plan_allocation != empty  %}
-  <span class="selling-plan-details">
-    {{item.selling_plan_allocation.selling_plan.name}}
-  </span>
-{% endif %}
 
-                      {%- assign property_size = item.properties | size -%}
+                      {% render 'paywhirl-subscriptions-cart-selling-plans', item: item %}
+
+{%- assign property_size = item.properties | size -%}
                       {% if property_size > 0 %}
                         {% for p in item.properties %}
                           {%- assign first_character_in_key = p.first | truncate: 1, '' -%}
