--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -107,8 +107,8 @@
           {{ section.settings.copyright_text }}
         {%- endif -%}
       </p>
-      <p class="footer__small-text">
-        &copy; {{ 'now' | date: '%Y' }} {{ shop.name }}
+      <p class="footer__small-text" style="border-top: 1px solid rgba(255,255,255,.4); padding-top: 18px; margin-top: 10px;">
+        &copy; {{ 'now' | date: '%Y' }} {{ shop.name }} ✝ * These statements have not been evaluated by the Food and Drug Administration. This product is not intended to diagnose, treat, cure or prevent any disease.
       </p>
     {%- endif -%}
   </div>
